Add support for reading from InputStream